--- a/build.gradle
+++ b/build.gradle
@@ -5,6 +5,8 @@ buildscript {
     }
     repositories {
         mavenCentral()
+        jcenter()
+
     }
     dependencies {
         classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
@@ -22,6 +24,7 @@ apply plugin: 'io.spring.dependency-management'
 group = 'ch.keepcalm'
 version = '0.0.1-SNAPSHOT'
 sourceCompatibility = 1.8
+
 compileKotlin {
     kotlinOptions {
         freeCompilerArgs = ["-Xjsr305=strict"]
@@ -37,8 +40,9 @@ compileTestKotlin {
 
 repositories {
     mavenCentral()
-}
+    jcenter()
 
+}
 
 dependencies {
     compile('org.springframework.boot:spring-boot-starter-data-mongodb')
